--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,26 @@
   text-align: center;
 }
 
+
+a {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.app{
+  min-height: 98.5vh;
+  min-width: 60vh;
+  border: 10px solid;
+}
+
+body {
+  background-image: url('../src/assets/brickwallBG.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0; 
+  padding: 0; 
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
