--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ a {
 }
 
 .app{
-  min-height: 80vh;
+  min-height: 70vh;
   min-width: 60vh;
   border: 10px solid;
 }
@@ -77,7 +77,6 @@ a {
 
 .credit-link {
   text-decoration: none;
-  color: white; 
   font-size: 14px;
   display: flex;
   align-items: center;
@@ -145,4 +144,16 @@ body {
 
 .read-the-docs {
   color: #888;
+}
+
+/* Dark Theme */
+.dark {
+  background-color: #524949;
+  color: #fff;
+}
+
+/* Light Theme */
+.light {
+  background-color: #fff;
+  color: #333;
 }
