--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 8vh;
 }
 
 .settings {
@@ -15,13 +16,6 @@ font-weight: 300;
 text-align: center;
 }
 
-.banner {
-display: flex;
-flex-direction: column;
-align-items: center;
-text-align: center;
-margin-top: 20px; 
-}
 
 .settings_selection {
 display: flex;
