--- a/src/pages/Quiz/Quiz.css
+++ b/src/pages/Quiz/Quiz.css
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: small;
 }
+
+
   
 .subtitle {
 font-size: 25px;
