--- a/src/pages/Leaderboard/Leaderboard.css
+++ b/src/pages/Leaderboard/Leaderboard.css
@@ -1,26 +1,11 @@
 /* Leaderboard.css */
-.leaderboard-container {
+.entry {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 20px;
-    height: 40vh;
-  }
+    justify-content: space-between;
+    padding: 10px 20px;
+    border-bottom: 1px solid #ddd; 
+}
   
-  .scrollable-content {
-    flex: 1;
-    overflow-y: auto;
-    height: calc(100vh - 180px); /* Adjust as needed */
-    margin-bottom: 20px;
-  }
-  
-  .entry {
-    margin: 10px 0;
-  }
-  
-  .back-button {
-    align-self: center;
-    margin-bottom: 10px;
-    margin-top: auto;
-  }
+
   
